# battery_properties_explorer

./: CMakeLists.txt  revisting_senior_design.txt
control_logic/: CMakeLists.txt
control_logic/use_cases/: CMakeLists.txt
control_logic/use_cases/MovementTest/: CMakeLists.txt
control_logic/use_cases/MovementTest/tests/: Tests_MovementTest.cpp
docs/: architecture_notes.txt
entities/: CMakeLists.txt
entities/PunchHead/include/: PunchHead.h
entities/PunchHead/src/: PunchHead.c
entities/PunchHead/tests/: Tests.cpp
hardware/: CMakeLists.txt
hardware/interfaces/: CMakeLists.txt
hardware/interfaces/DcMotorController/: CMakeLists.txt
hardware/interfaces/DcMotorController/include/: DcMotorController.h  DcMotorController_private.h
hardware/interfaces/DcMotorController/src/: DcMotorController.c
hardware/interfaces/DcMotorController/tests/: Tests.cpp
hardware/interfaces/DisplacementSensor/: CMakeLists.txt
hardware/interfaces/DisplacementSensor/include/: DisplacementSensor.h  DisplacementSensor_private.h
hardware/interfaces/DisplacementSensor/src/: DisplacementSensor.c
hardware/interfaces/DisplacementSensor/tests/: Tests.cpp
hardware/spies/: CMakeLists.txt
hardware/spies/DcMotorControllerSpy/: CMakeLists.txt
hardware/spies/DcMotorControllerSpy/include/: DcMotorControllerSpy.h
hardware/spies/DcMotorControllerSpy/src/: DcMotorControllerSpy.c
hardware/spies/DcMotorControllerSpy/tests/: Tests_create_and_destroy.cpp  Tests_spy_on_setDutyCycle.cpp  Tests_spy_on_setForward.cpp  Tests_spy_on_setReverse.cpp  Tests_spy_through_interface.cpp
hardware/spies/DisplacementSensorSpy/: CMakeLists.txt
hardware/spies/DisplacementSensorSpy/include/: DisplacementSensorSpy.h
hardware/spies/DisplacementSensorSpy/src/: DisplacementSensorSpy.c
hardware/spies/DisplacementSensorSpy/tests/: Tests.cpp
hardware/spies/ForceSensorSpy/include/: ForceSensorSpy.h
